<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LogoBackground"
    android:orientation="vertical"
    tools:context=".Logging_activity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/LogoImgView"
        android:src="@drawable/temp_logo"
        />

    <EditText
        android:id="@+id/loginEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/autofillLogin"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/autofillPassword"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logButton"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:onClick="loggingButton"
            android:gravity="center_horizontal|center_vertical"
            />

        <Button
            android:id="@+id/regButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/LogoBackground"
            android:text="@string/register"
            android:onClick="registerButton"
            android:gravity="center_horizontal|center_vertical"/>
    </LinearLayout>



</LinearLayout>