<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    tools:context=".ProfileSettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/welcomeYou"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:gravity="center"/>
    <TextView
        android:id="@+id/userNameTxtView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"/>
    <TextView
        android:id="@+id/userWeightTxtView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"/>
    <TextView
        android:id="@+id/userHeightTxtView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"/>
    <TextView
        android:id="@+id/userWeightGoalTxtView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"/>
    <TextView
        android:id="@+id/userBMITxtView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:onClick="okButton"
            android:layout_gravity="center"
            android:background="@color/row_background"/>

        <Button
            android:id="@+id/loggOffButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:onClick="loggOutButton"
            android:text="@string/log_off"
            android:background="@color/mainBackground"/>
    </LinearLayout>

</LinearLayout>