<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackground">

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textSize="20sp"
        android:gravity="center"/>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            card_view:cardBackgroundColor="@color/row_background"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="false"
            android:layout_margin="8dp"
            android:onClick="exerOnclick">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:id="@+id/exerImgView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/sztangielki"
                android:layout_margin="8dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/exerTxtView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/excerField"
                android:textSize="20sp"
                android:layout_weight="3"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
            android:layout_weight="1"

            card_view:cardBackgroundColor="@color/row_background"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="false"
        android:layout_margin="8dp"
            android:onClick="trainOnClick">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/trainImgView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/sztangielki"
                android:layout_margin="8dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/trainTxtView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/trainField"
                android:textSize="20sp"
                android:layout_weight="3"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            card_view:cardBackgroundColor="@color/row_background"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="false"
            android:layout_margin="8dp"
            android:onClick="profOnclick">
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profImgView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ustawienia"
                    android:layout_margin="8dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/profTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/profField"
                    android:textSize="20sp"
                    android:layout_weight="3"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
